Travel stipend: wordsmith

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -23,13 +23,13 @@ Outreachy Travel Stipend
 
 	<li><a href="{% url 'travel-stipend' %}#preapproval">Check whether you need pre-approval</a> for your travel expenses before booking your travel.</li>
 
-	<li><a href="{% url 'travel-stipend' %}#scholarships">Apply for any scholarships</a> your conference offers to cover travel costs.</li>
+	<li><a href="{% url 'travel-stipend' %}#scholarships">Apply for any scholarships</a> your conference offers to cover additional travel costs.</li>
 
 	<li><a href="{% url 'travel-stipend' %}#airfare">Save a flight search screenshot</a> from a widely-recognized airfare comparison site, such as <a href="http://orbitz.com">Orbitz</a>, <a href="http://kayak.com">Kayak</a> or <a href="http://hipmunk.com/">Hipmunk</a>.</li>
 
 	<li>While on your trip, you may need to <a href="{% url 'travel-stipend' %}#receipts">save some receipts</a>.</li>
 
-	<li>During your event, take notes about what you learned or accomplished, and how it improved your ability to contribute to free and open source software, for your trip report blog post. You may want to take pictures, if the event photography policy allows it.</li>
+	<li>During your event, think about what you will talk about in your trip report. Take notes about what you learned or accomplished. Think about how this travel helped improve your ability to contribute to free and open source software. You may want to take pictures, if the event photography policy allows it.</li>
 
 	<li>Publish your trip report on your blog.</li>
 
@@ -38,7 +38,7 @@ Outreachy Travel Stipend
 
 <h1 id='timeframe'>When does the travel have to happen?</h1>
 
-<p>Outreachy's travel stipends are valid for two years. This ensures that the travel stipend can be used for travelling to events that happen once a year. We cannot provide exceptions for expired travel stipend.</p>
+<p>Outreachy's travel stipends are valid for two years. This ensures that the travel stipend can be used for travelling to yearly events. We cannot provide exceptions for expired travel stipends.</p>
 
 <p>The travel stipend is valid for travel that starts between when your internship was announced and two years from the official internship start date. If you started your internship early or late, use the official start dates below.</p>
 
@@ -208,7 +208,7 @@ Outreachy Travel Stipend
 
 <p>If a participating community has a process for reimbursing travelling expenses of its contributors, it might choose to do so itself for its Outreachy interns. In that case the community will be the custodian of your travel stipend, and you will be notified about it. You will need to follow the reimbursement procedures of that community, and should ask your mentor or coordinator to let you know what they are.</p>
 
-<h1 id='reimbursement'>How do I get reimbursed for the travel stipend by the Software Freedom Conservancy?</h1>
+<h1 id='reimbursement'>How do I get reimbursed for the travel stipend?</h1>
 
 <p>Unless you were told otherwise, Software Freedom Conservancy is the organization that will reimburse your travel. </p>
 
