Spell out conference abbreviations

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -97,10 +97,16 @@ Outreachy Travel Stipend
 	</tr>
 	</thread>
 	<tr>
-		<td><a href="http://linux.conf.au/">linux.conf.au</a></td>
+		<td><a href="http://linux.conf.au/">Linux Conf Australia</a></td>
 		<td>Australia or New Zealand</td>
 		<td>August</td>
 		<td>January or February</td>
+	</tr>
+	<tr>
+		<td><a href="https://debconf.org/">Debian Developer's Conference (DebConf)</a></td>
+		<td>Varies</td>
+		<td>January</td>
+		<td>July or August</td>
 	</tr>
 	<tr>
 		<td><a href="http://devconf.cz/">DevConf.cz</a></td>
@@ -109,19 +115,19 @@ Outreachy Travel Stipend
 		<td>January</td>
 	</tr>
 	<tr>
-		<td><a href="https://fosdem.org/">FOSDEM</a></td>
+		<td><a href="https://fosdem.org/">Free and Open Source Software Developers' European Meeting (FOSDEM)</a></td>
 		<td>Brussels, Belgium</td>
 		<td>November and early December</td>
 		<td>February</td>
 	</tr>
 	<tr>
-		<td><a href="http://www.socallinuxexpo.org/">SCALE</a></td>
-		<td>Pasadena, CA</td>
+		<td><a href="http://www.socallinuxexpo.org/">Southern California Linux Expo (SCALE)</a></td>
+		<td>Pasadena, CA, USA</td>
 		<td>November</td>
 		<td>February or March</td>
 	</tr>
 	<tr>
-		<td><a href="http://fossasia.org/">FOSSASIA</a></td>
+		<td><a href="http://fossasia.org/">Free and Open Source Software Asia (FOSSASIA)</a></td>
 		<td>Singapore</td>
 		<td>December</td>
 		<td>March</td>
@@ -133,13 +139,25 @@ Outreachy Travel Stipend
 		<td>February or March</td>
 	</tr>
 	<tr>
-		<td><a href="http://www.oscon.com/">OSCON</a></td>
-		<td>Austin, TX</td>
+		<td><a href="https://ohiolinux.org/">Ohio Linux Fest</a></td>
+		<td>Ohio, USA</td>
+		<td>May</td>
+		<td>October</td>
+	</tr>
+	<tr>
+		<td><a href="http://www.oscon.com/">O'Rielly Open Source Conference (OSCON)</a></td>
+		<td>Austin, TX, USA</td>
 		<td>October</td>
 		<td>May, June, or July</td>
 	</tr>
 	<tr>
-		<td><a href="http://softwarelivre.org/">FISL</a></td>
+		<td><a href="https://mozillafestival.org/">Mozilla Festival</a></td>
+		<td>London, England, United Kingdom</td>
+		<td>October</td>
+		<td>May, June, or July</td>
+	</tr>
+	<tr>
+		<td><a href="http://softwarelivre.org/">Fórum Internacional do Software Livre (FISL)</a></td>
 		<td>Brazil</td>
 		<td>February</td>
 		<td>July</td>
@@ -151,19 +169,13 @@ Outreachy Travel Stipend
 		<td>July</td>
 	</tr>
 	<tr>
-		<td><a href="http://softwarefreedomday.org/">Software Freedom Day</a></td>
-		<td>worldwide</td>
-		<td>various</td>
-		<td>mid-September</td>
-	</tr>
-	<tr>
 		<td><a href="http://allthingsopen.org/">All Things Open</a></td>
 		<td>Raleigh, NC, USA</td>
 		<td>May</td>
 		<td>October</td>
 	</tr>
 	<tr>
-		<td><a href="http://seagl.org/">SeaGL</a></td>
+		<td><a href="http://seagl.org/">Seattle GNU/Linux conference (SeaGL)</a></td>
 		<td>Seattle, WA, USA</td>
 		<td>August</td>
 		<td>November</td>
