Put conference country first in location

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -103,25 +103,19 @@ Outreachy Travel Stipend
 		<td>January or February</td>
 	</tr>
 	<tr>
-		<td>Varies</td>
-		<td><a href="https://debconf.org/">Debian Developer's Conference (DebConf)</a></td>
-		<td>January</td>
-		<td>July or August</td>
-	</tr>
-	<tr>
-		<td>Brno, Czech Republic</td>
+		<td>Czech Republic - Brno</td>
 		<td><a href="http://devconf.cz/">DevConf.cz</a></td>
 		<td>November</td>
 		<td>January</td>
 	</tr>
 	<tr>
-		<td>Brussels, Belgium</td>
+		<td>Belgium - Brussels</td>
 		<td><a href="https://fosdem.org/">Free and Open Source Software Developers' European Meeting (FOSDEM)</a></td>
 		<td>November and early December</td>
 		<td>February</td>
 	</tr>
 	<tr>
-		<td>Pasadena, CA, USA</td>
+		<td>United States of America - Pasadena, CA</td>
 		<td><a href="http://www.socallinuxexpo.org/">Southern California Linux Expo (SCALE)</a></td>
 		<td>November</td>
 		<td>February or March</td>
@@ -133,25 +127,25 @@ Outreachy Travel Stipend
 		<td>March</td>
 	</tr>
 	<tr>
-		<td>Boston, MA, USA</td>
+		<td>United States of America - Boston, MA</td>
 		<td><a href="https://libreplanet.org/">LibrePlanet</a></td>
 		<td>November</td>
 		<td>February or March</td>
 	</tr>
 	<tr>
-		<td>Ohio, USA</td>
+		<td>United States of America - Ohio</td>
 		<td><a href="https://ohiolinux.org/">Ohio Linux Fest</a></td>
 		<td>May</td>
 		<td>October</td>
 	</tr>
 	<tr>
-		<td>Austin, TX, USA</td>
+		<td>United States of America - Austin, TX</td>
 		<td><a href="http://www.oscon.com/">O'Rielly Open Source Conference (OSCON)</a></td>
 		<td>October</td>
 		<td>May, June, or July</td>
 	</tr>
 	<tr>
-		<td>London, England, United Kingdom</td>
+		<td>United Kingdom - London, England</td>
 		<td><a href="https://mozillafestival.org/">Mozilla Festival</a></td>
 		<td>October</td>
 		<td>May, June, or July</td>
@@ -163,22 +157,28 @@ Outreachy Travel Stipend
 		<td>July</td>
 	</tr>
 	<tr>
-		<td>Texas, USA</td>
+		<td>United States of America - Texas</td>
 		<td><a href="https://texaslinuxfest.org/">Texas Linux Fest</a></td>
 		<td>April</td>
 		<td>July</td>
 	</tr>
 	<tr>
-		<td>Raleigh, NC, USA</td>
+		<td>United States of America - Raleigh, NC</td>
 		<td><a href="http://allthingsopen.org/">All Things Open</a></td>
 		<td>May</td>
 		<td>October</td>
 	</tr>
 	<tr>
-		<td>Seattle, WA, USA</td>
+		<td>United States of America - Seattle, WA</td>
 		<td><a href="http://seagl.org/">Seattle GNU/Linux conference (SeaGL)</a></td>
 		<td>August</td>
 		<td>November</td>
+	</tr>
+	<tr>
+		<td>Varies</td>
+		<td><a href="https://debconf.org/">Debian Developer's Conference (DebConf)</a></td>
+		<td>January</td>
+		<td>July or August</td>
 	</tr>
 </table>
 
