Reorder conference list by country

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -115,10 +115,10 @@ Outreachy Travel Stipend
 		<td>February</td>
 	</tr>
 	<tr>
-		<td>United States of America - Pasadena, CA</td>
-		<td><a href="http://www.socallinuxexpo.org/">Southern California Linux Expo (SCALE)</a></td>
-		<td>November</td>
-		<td>February or March</td>
+		<td>Brazil</td>
+		<td><a href="http://softwarelivre.org/">Fórum Internacional do Software Livre (FISL)</a></td>
+		<td>February</td>
+		<td>July</td>
 	</tr>
 	<tr>
 		<td>Singapore</td>
@@ -127,10 +127,28 @@ Outreachy Travel Stipend
 		<td>March</td>
 	</tr>
 	<tr>
-		<td>United States of America - Boston, MA</td>
+		<td>United Kingdom - London, England</td>
+		<td><a href="https://mozillafestival.org/">Mozilla Festival</a></td>
+		<td>October</td>
+		<td>May, June, or July</td>
+	</tr>
+	<tr>
+		<td>United States of America - California, Pasadena</td>
+		<td><a href="http://www.socallinuxexpo.org/">Southern California Linux Expo (SCALE)</a></td>
+		<td>November</td>
+		<td>February or March</td>
+	</tr>
+	<tr>
+		<td>United States of America - Massachusetts - Boston</td>
 		<td><a href="https://libreplanet.org/">LibrePlanet</a></td>
 		<td>November</td>
 		<td>February or March</td>
+	</tr>
+	<tr>
+		<td>United States of America - North Carolina - Raleigh</td>
+		<td><a href="http://allthingsopen.org/">All Things Open</a></td>
+		<td>May</td>
+		<td>October</td>
 	</tr>
 	<tr>
 		<td>United States of America - Ohio</td>
@@ -139,22 +157,10 @@ Outreachy Travel Stipend
 		<td>October</td>
 	</tr>
 	<tr>
-		<td>United States of America - Austin, TX</td>
+		<td>United States of America - Oregon</td>
 		<td><a href="http://www.oscon.com/">O'Rielly Open Source Conference (OSCON)</a></td>
 		<td>October</td>
 		<td>May, June, or July</td>
-	</tr>
-	<tr>
-		<td>United Kingdom - London, England</td>
-		<td><a href="https://mozillafestival.org/">Mozilla Festival</a></td>
-		<td>October</td>
-		<td>May, June, or July</td>
-	</tr>
-	<tr>
-		<td>Brazil</td>
-		<td><a href="http://softwarelivre.org/">Fórum Internacional do Software Livre (FISL)</a></td>
-		<td>February</td>
-		<td>July</td>
 	</tr>
 	<tr>
 		<td>United States of America - Texas</td>
@@ -163,13 +169,7 @@ Outreachy Travel Stipend
 		<td>July</td>
 	</tr>
 	<tr>
-		<td>United States of America - Raleigh, NC</td>
-		<td><a href="http://allthingsopen.org/">All Things Open</a></td>
-		<td>May</td>
-		<td>October</td>
-	</tr>
-	<tr>
-		<td>United States of America - Seattle, WA</td>
+		<td>United States of America - Washington - Seattle</td>
 		<td><a href="http://seagl.org/">Seattle GNU/Linux conference (SeaGL)</a></td>
 		<td>August</td>
 		<td>November</td>
