Report number of funded interns from correct round
We already have a Participation which knows both the right community and
the right round, and even has the right convenience method for doing the
math. So let's not go get a possibly-different round and look up a
possibly-different Participation.

--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -213,8 +213,8 @@ Outreachy Internships | Apply | Pick a Project
 		{% endif %}
 	{% endif %}
 	
-	{% for community, projects in late_projects %}
-		<h4>{{ community.name }} - {{ community.get_number_of_funded_interns }} intern{{ community.get_number_of_funded_interns|pluralize }}</h4>
+	{% for community, funded_interns, projects in late_projects %}
+		<h4>{{ community.name }} - {{ funded_interns }} intern{{ funded_interns|pluralize }}</h4>
 		<p>{{ community.description }}</p>
 		{% if request.user.comrade.eligible_application or request.user.comrade.approved_mentor_or_coordinator or request.user.comrade.approved_reviewer %}
 			{% if not current_round.has_late_application_deadline_passed %}
@@ -242,8 +242,8 @@ Outreachy Internships | Apply | Pick a Project
 		{% endif %}
 	{% endif %}
 	
-	{% for community, projects in ontime_projects %}
-		<h4>{{ community.name }} - {{ community.get_number_of_funded_interns }} intern{{ community.get_number_of_funded_interns|pluralize }}</h4>
+	{% for community, funded_interns, projects in ontime_projects %}
+		<h4>{{ community.name }} - {{ funded_interns }} intern{{ funded_interns|pluralize }}</h4>
 		<p>{{ community.description }}</p>
 		{% if request.user.comrade.approved_reviewer or request.user.comrade.eligible_application or request.user.comrade.approved_mentor_or_coordinator %}
 			{% if not current_round.has_ontime_application_deadline_passed %}
