--- a/home/templates/home/dashboard/mentor_projects.html
+++ b/home/templates/home/dashboard/mentor_projects.html
@@ -19,7 +19,7 @@ You can also <a href="{% url 'community-cfp' %}#mentor">submit another project</
 	{% endif %}
 	<ul>
 	{% for c, projects_list in communities %}
-		<li>{{ c.name }}: <a href="{% url 'community-applicants' round_slug=current_round.slug community_slug=c.slug  %}">see applicants</a> or <a href="{% url 'community-read-only' community_slug=c.slug %}">submit another project</a> or <a href="{% url 'community-landing' round_slug=current_round.slug slug=c.slug %}">view the community projects page applicants see</a></li>
+		<li>{{ c.name }}: <a href="{% url 'community-applicants' round_slug=current_round.slug community_slug=c.slug  %}">see applicants</a> or <a href="{% url 'community-read-only' community_slug=c.slug %}">submit another project</a> or <a href="{% url 'community-landing' round_slug=current_round.slug community_slug=c.slug %}">view the community projects page applicants see</a></li>
 	{% endfor %}
 	</ul>
 {% endfor %}
