--- a/home/templates/home/snippet/project_promotion.html
+++ b/home/templates/home/snippet/project_promotion.html
@@ -1,6 +1,6 @@
 <p>After the Outreachy round opens on {{ current_round.appsopen }}, you can promote this project to applicants by linking to the community landing page:</p>
 
-<p><a href="{% url 'community-landing' round_slug=current_round.slug slug=community.slug %}">{{ request.scheme }}://{{ request.get_host }}{% url 'community-landing' round_slug=current_round.slug slug=community.slug %}</a>
+<p><a href="{% url 'community-landing' round_slug=current_round.slug community_slug=community.slug %}">{{ request.scheme }}://{{ request.get_host }}{% url 'community-landing' round_slug=current_round.slug slug=community.slug %}</a>
 </p>
 
 <p>Once you have started work with an applicant on a contribution, you should remind them to record their in-progress contributions at this URL:</p>
