--- a/home/templates/home/snippet/projects_for_round_page.html
+++ b/home/templates/home/snippet/projects_for_round_page.html
@@ -17,7 +17,7 @@
 			<p><strong>{{ project.short_title }}</strong></p>
 			<div class="card-text">{% include 'home/snippet/project_hidden.html' %}</div>
 		{% else %}
-			<p><strong><a href="{% url 'community-landing' round_slug=current_round.slug slug=project.project_round.community.slug %}#{{ project.slug }}">{{ project.short_title }}</a></strong></p>
+			<p><strong><a href="{% url 'community-landing' round_slug=current_round.slug community_slug=project.project_round.community.slug %}#{{ project.slug }}">{{ project.short_title }}</a></strong></p>
 		{% endif %}
 
 		{% if project.needs_more_applicants %}
