--- a/home/templates/home/round_page.html
+++ b/home/templates/home/round_page.html
@@ -9,7 +9,7 @@
 <p><a href="/apply/">Why apply to Outreachy?</a> &gt;
 {% if not request.user.comrade or request.user.comrade.needs_application %}
 	<a href="{% url 'eligibility' %}">Start your initial application</a>
-{% elif request.user.comrade.ineligible_application or request.user.comrade.pending_application %}
+{% elif application.is_rejected or application.is_pending %}
 	<a href="{% url 'eligibility-results' %}">Review your initial application</a>
 {% else %}
 	<a href="/apply/eligibility/">Outreachy Eligibility Rules</a>
