No more need to annotate projects with a 'withdrawn' flag
I recently introduced an `is_withdrawn()` method that makes checking
this convenient in templates.

--- a/home/templates/home/snippet/apply_prompt.html
+++ b/home/templates/home/snippet/apply_prompt.html
@@ -81,7 +81,7 @@
 
 		<ul class="card-text">
 			{% for p in project_applications %}
-				<li>{% if p.withdrawn %}(Withdrawn application) {% endif %}<a href="{{ p.get_contributions_url }}">{{ p.short_title }}</a></li>
+				<li>{% if p.is_withdrawn %}(Withdrawn application) {% endif %}<a href="{{ p.get_contributions_url }}">{{ p.short_title }}</a></li>
 			{% endfor %}
 		</ul>
 	{% endif %}
